force-app/main/default/objects/DigitaleVsa__c/DigitaleVsa__c.object-meta.xml
<CustomObject>
    <label>Digitale VSA</label>
    <nameField>
        <displayFormat>DVSA-{yyyy}-{0000}</displayFormat>
        <label>Digitale VSA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digitale VSAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>