force-app/main/default/objects/DigitaleVsa__c/fields/ArbeitgeberInOrtP1__c.field-meta.xml
<CustomField>
    <fullName>ArbeitgeberInOrtP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.ArbeitgeberInOrt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Arbeitgeber/in Ort P1</label>
    <type>Text</type>
</CustomField>