force-app/main/default/objects/DigitaleVsa__c/fields/ArbeitgeberInOrtP2__c.field-meta.xml
<CustomField>
    <fullName>ArbeitgeberInOrtP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.ArbeitgeberInOrt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Arbeitgeber/in Ort P2</label>
    <type>Text</type>
</CustomField>