force-app/main/default/objects/DigitaleVsa__c/fields/ArbeitgeberSeitP1__c.field-meta.xml
<CustomField>
    <fullName>ArbeitgeberSeitP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.ArbeitgeberSeit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Arbeitgeber seit P1</label>
    <type>Date</type>
</CustomField>