force-app/main/default/objects/DigitaleVsa__c/fields/ArbeitgeberSeitP2__c.field-meta.xml
<CustomField>
    <fullName>ArbeitgeberSeitP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.ArbeitgeberSeit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Arbeitgeber seit P2</label>
    <type>Date</type>
</CustomField>