force-app/main/default/objects/DigitaleVsa__c/fields/BankUndSparguthaben__c.field-meta.xml
<CustomField>
    <fullName>BankUndSparguthaben__c</fullName>
    <label>Bank- und Sparguthaben</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>