force-app/main/default/objects/DigitaleVsa__c/fields/BankUndSparguthabenP1__c.field-meta.xml
<CustomField>
    <fullName>BankUndSparguthabenP1__c</fullName>
    <label>Bank- und Sparguthaben P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>