force-app/main/default/objects/DigitaleVsa__c/fields/BankUndSparguthabenP2__c.field-meta.xml
<CustomField>
    <fullName>BankUndSparguthabenP2__c</fullName>
    <label>Bank- und Sparguthaben P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>