force-app/main/default/objects/DigitaleVsa__c/fields/BerufIstBefristetBisP1__c.field-meta.xml
<CustomField>
    <fullName>BerufIstBefristetBisP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.BerufIstBefristetBis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beruf ist befristet bis P1</label>
    <type>Date</type>
</CustomField>