force-app/main/default/objects/DigitaleVsa__c/fields/BerufIstBefristetBisP2__c.field-meta.xml
<CustomField>
    <fullName>BerufIstBefristetBisP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.BerufIstBefristetBis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beruf ist befristet bis P2</label>
    <type>Date</type>
</CustomField>