force-app/main/default/objects/DigitaleVsa__c/fields/BerufIstBefristetP1__c.field-meta.xml
<CustomField>
    <fullName>BerufIstBefristetP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.BerufIstBefristet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Beruf ist befristet P1</label>
    <type>Checkbox</type>
</CustomField>