force-app/main/default/objects/DigitaleVsa__c/fields/BerufIstBefristetP2__c.field-meta.xml
<CustomField>
    <fullName>BerufIstBefristetP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.BerufIstBefristet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Beruf ist befristet P2</label>
    <type>Checkbox</type>
</CustomField>