force-app/main/default/objects/DigitaleVsa__c/fields/BerufP1__c.field-meta.xml
<CustomField>
    <fullName>BerufP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.Beruf__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Beruf P1</label>
    <type>Text</type>
</CustomField>