force-app/main/default/objects/DigitaleVsa__c/fields/BerufP2__c.field-meta.xml
<CustomField>
    <fullName>BerufP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.Beruf__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Beruf P2</label>
    <type>Text</type>
</CustomField>