force-app/main/default/objects/DigitaleVsa__c/fields/EMailP1__c.field-meta.xml
<CustomField>
    <fullName>EMailP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-Mail P1</label>
    <type>Text</type>
</CustomField>