force-app/main/default/objects/DigitaleVsa__c/fields/EMailP2__c.field-meta.xml
<CustomField>
    <fullName>EMailP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-Mail P2</label>
    <type>Text</type>
</CustomField>