force-app/main/default/objects/DigitaleVsa__c/fields/ErsterKaeufer__c.field-meta.xml
<CustomField>
    <fullName>ErsterKaeufer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Erster Käufer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Digitale VSAs</relationshipLabel>
    <relationshipName>DigitaleVSAsErsterKaeufer</relationshipName>
    <type>Lookup</type>
</CustomField>