force-app/main/default/objects/DigitaleVsa__c/fields/FamilienstandP1__c.field-meta.xml
<CustomField>
    <fullName>FamilienstandP1__c</fullName>
    <formula>TEXT(Finanzierungsanfrage__r.ErsterKaeufer__r.Familienstand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Familienstand P1</label>
    <type>Text</type>
</CustomField>