force-app/main/default/objects/DigitaleVsa__c/fields/FamilienstandP2__c.field-meta.xml
<CustomField>
    <fullName>FamilienstandP2__c</fullName>
    <formula>TEXT(Finanzierungsanfrage__r.ZweiterKaeufer__r.Familienstand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Familienstand P2</label>
    <type>Text</type>
</CustomField>