force-app/main/default/objects/DigitaleVsa__c/fields/Finanzierungsanfrage__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungsanfrage__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Finanzierungsanfrage</label>
    <referenceTo>Finanzierungsanfrage__c</referenceTo>
    <relationshipLabel>Digitale VSAs</relationshipLabel>
    <relationshipName>DigitaleVsas</relationshipName>
    <type>Lookup</type>
</CustomField>