force-app/main/default/objects/DigitaleVsa__c/fields/GeburtsdatumP1__c.field-meta.xml
<CustomField>
    <fullName>GeburtsdatumP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geburtsdatum P1</label>
    <type>Date</type>
</CustomField>