force-app/main/default/objects/DigitaleVsa__c/fields/GeburtsdatumP2__c.field-meta.xml
<CustomField>
    <fullName>GeburtsdatumP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geburtsdatum P2</label>
    <type>Date</type>
</CustomField>