force-app/main/default/objects/DigitaleVsa__c/fields/GeburtsnameP1__c.field-meta.xml
<CustomField>
    <fullName>GeburtsnameP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.Geburtsname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geburtsname P1</label>
    <type>Text</type>
</CustomField>