force-app/main/default/objects/DigitaleVsa__c/fields/GeburtsnameP2__c.field-meta.xml
<CustomField>
    <fullName>GeburtsnameP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.Geburtsname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geburtsname P2</label>
    <type>Text</type>
</CustomField>