force-app/main/default/objects/DigitaleVsa__c/fields/GeburtsortP1__c.field-meta.xml
<CustomField>
    <fullName>GeburtsortP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.Geburtsort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geburtsort P1</label>
    <type>Text</type>
</CustomField>