force-app/main/default/objects/DigitaleVsa__c/fields/GeburtsortP2__c.field-meta.xml
<CustomField>
    <fullName>GeburtsortP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.Geburtsort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geburtsort P2</label>
    <type>Text</type>
</CustomField>