force-app/main/default/objects/DigitaleVsa__c/fields/GueterstandP1__c.field-meta.xml
<CustomField>
    <fullName>GueterstandP1__c</fullName>
    <formula>TEXT(Finanzierungsanfrage__r.ErsterKaeufer__r.Gueterstand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Güterstand P1</label>
    <type>Text</type>
</CustomField>