force-app/main/default/objects/DigitaleVsa__c/fields/GueterstandP2__c.field-meta.xml
<CustomField>
    <fullName>GueterstandP2__c</fullName>
    <formula>TEXT(Finanzierungsanfrage__r.ZweiterKaeufer__r.Gueterstand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Güterstand P2</label>
    <type>Text</type>
</CustomField>