force-app/main/default/objects/DigitaleVsa__c/fields/KaltmieteWohnungP1__c.field-meta.xml
<CustomField>
    <fullName>KaltmieteWohnungP1__c</fullName>
    <label>Kaltmiete Wohnung P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>