force-app/main/default/objects/DigitaleVsa__c/fields/KaltmieteWohnungP2__c.field-meta.xml
<CustomField>
    <fullName>KaltmieteWohnungP2__c</fullName>
    <label>Kaltmiete Wohnung P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>