force-app/main/default/objects/DigitaleVsa__c/fields/KfzLeasingrateP1__c.field-meta.xml
<CustomField>
    <fullName>KfzLeasingrateP1__c</fullName>
    <label>Kfz Leasingrate P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>