force-app/main/default/objects/DigitaleVsa__c/fields/KfzLeasingrateP2__c.field-meta.xml
<CustomField>
    <fullName>KfzLeasingrateP2__c</fullName>
    <label>Kfz Leasingrate P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>