force-app/main/default/objects/DigitaleVsa__c/fields/Kind1NameUndGeburtsdatumP1__c.field-meta.xml
<CustomField>
    <fullName>Kind1NameUndGeburtsdatumP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.Kind1NameUndGeburtsdatum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kind 1 (Name und Geburtsdatum) P1</label>
    <type>Text</type>
</CustomField>