force-app/main/default/objects/DigitaleVsa__c/fields/Kind1NameUndGeburtsdatumP2__c.field-meta.xml
<CustomField>
    <fullName>Kind1NameUndGeburtsdatumP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.Kind1NameUndGeburtsdatum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kind 1 (Name und Geburtsdatum) P2</label>
    <type>Text</type>
</CustomField>