force-app/main/default/objects/DigitaleVsa__c/fields/Kind2NameUndGeburtsdatumP1__c.field-meta.xml
<CustomField>
    <fullName>Kind2NameUndGeburtsdatumP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.Kind2NameUndGeburtsdatum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kind 2 (Name und Geburtsdatum) P1</label>
    <type>Text</type>
</CustomField>