force-app/main/default/objects/DigitaleVsa__c/fields/KindergeldP1__c.field-meta.xml
<CustomField>
    <fullName>KindergeldP1__c</fullName>
    <label>Kindergeld P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>