force-app/main/default/objects/DigitaleVsa__c/fields/KindergeldP2__c.field-meta.xml
<CustomField>
    <fullName>KindergeldP2__c</fullName>
    <label>Kindergeld P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>