force-app/main/default/objects/DigitaleVsa__c/fields/KleinkreditratenP1__c.field-meta.xml
<CustomField>
    <fullName>KleinkreditratenP1__c</fullName>
    <label>Kleinkreditraten P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>