force-app/main/default/objects/DigitaleVsa__c/fields/KleinkreditratenP2__c.field-meta.xml
<CustomField>
    <fullName>KleinkreditratenP2__c</fullName>
    <label>Kleinkreditraten P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>