force-app/main/default/objects/DigitaleVsa__c/fields/Kundenakte__c.field-meta.xml
<CustomField>
    <fullName>Kundenakte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kundenakte</label>
    <referenceTo>Verkaufsraum__c</referenceTo>
    <relationshipLabel>Digitale VSAs</relationshipLabel>
    <relationshipName>DigitaleVSAs</relationshipName>
    <type>Lookup</type>
</CustomField>