force-app/main/default/objects/DigitaleVsa__c/fields/LebenshaltungskostenP1__c.field-meta.xml
<CustomField>
    <fullName>LebenshaltungskostenP1__c</fullName>
    <label>Lebenshaltungskosten P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>