force-app/main/default/objects/DigitaleVsa__c/fields/LebenshaltungskostenP2__c.field-meta.xml
<CustomField>
    <fullName>LebenshaltungskostenP2__c</fullName>
    <label>Lebenshaltungskosten P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>