force-app/main/default/objects/DigitaleVsa__c/fields/MieteinnahmenP1__c.field-meta.xml
<CustomField>
    <fullName>MieteinnahmenP1__c</fullName>
    <label>Mieteinnahmen P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>