force-app/main/default/objects/DigitaleVsa__c/fields/MieteinnahmenP2__c.field-meta.xml
<CustomField>
    <fullName>MieteinnahmenP2__c</fullName>
    <label>Mieteinnahmen P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>