force-app/main/default/objects/DigitaleVsa__c/fields/MobilP1__c.field-meta.xml
<CustomField>
    <fullName>MobilP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobil P1</label>
    <type>Text</type>
</CustomField>