force-app/main/default/objects/DigitaleVsa__c/fields/MobilP2__c.field-meta.xml
<CustomField>
    <fullName>MobilP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobil P2</label>
    <type>Text</type>
</CustomField>