force-app/main/default/objects/DigitaleVsa__c/fields/NationalitaetP1__c.field-meta.xml
<CustomField>
    <fullName>NationalitaetP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.Nationalitaet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nationalität P1</label>
    <type>Text</type>
</CustomField>