force-app/main/default/objects/DigitaleVsa__c/fields/NationalitaetP2__c.field-meta.xml
<CustomField>
    <fullName>NationalitaetP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.Nationalitaet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nationalität P2</label>
    <type>Text</type>
</CustomField>