force-app/main/default/objects/DigitaleVsa__c/fields/NebeneinkommenP1__c.field-meta.xml
<CustomField>
    <fullName>NebeneinkommenP1__c</fullName>
    <label>Nebeneinkommen P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>