force-app/main/default/objects/DigitaleVsa__c/fields/NebeneinkommenP2__c.field-meta.xml
<CustomField>
    <fullName>NebeneinkommenP2__c</fullName>
    <label>Nebeneinkommen P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>