force-app/main/default/objects/DigitaleVsa__c/fields/NebenjobArbeitgeberInOrtP1__c.field-meta.xml
<CustomField>
    <fullName>NebenjobArbeitgeberInOrtP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.NebenjobArbeitgeberInOrt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Nebenjob Arbeitgeber/in Ort P1</label>
    <type>Text</type>
</CustomField>