force-app/main/default/objects/DigitaleVsa__c/fields/NebenjobArbeitgeberInOrtP2__c.field-meta.xml
<CustomField>
    <fullName>NebenjobArbeitgeberInOrtP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.NebenjobArbeitgeberInOrt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Nebenjob Arbeitgeber/in Ort P2</label>
    <type>Text</type>
</CustomField>