force-app/main/default/objects/DigitaleVsa__c/fields/NebenjobIstBefristetP1__c.field-meta.xml
<CustomField>
    <fullName>NebenjobIstBefristetP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.NebenjobIstBefristet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Nebenjob ist befristet P1</label>
    <type>Checkbox</type>
</CustomField>