force-app/main/default/objects/DigitaleVsa__c/fields/NebenjobIstBefristetP2__c.field-meta.xml
<CustomField>
    <fullName>NebenjobIstBefristetP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.NebenjobIstBefristet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Nebenjob ist befristet P2</label>
    <type>Checkbox</type>
</CustomField>