force-app/main/default/objects/DigitaleVsa__c/fields/NebenjobP1__c.field-meta.xml
<CustomField>
    <fullName>NebenjobP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.Nebenjob__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Nebenjob P1</label>
    <type>Text</type>
</CustomField>