force-app/main/default/objects/DigitaleVsa__c/fields/NebenjobP2__c.field-meta.xml
<CustomField>
    <fullName>NebenjobP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.Nebenjob__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Nebenjob P2</label>
    <type>Text</type>
</CustomField>