force-app/main/default/objects/DigitaleVsa__c/fields/NebenjobSeitP1__c.field-meta.xml
<CustomField>
    <fullName>NebenjobSeitP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.NebenjobSeit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Nebenjob seit P1</label>
    <type>Date</type>
</CustomField>