force-app/main/default/objects/DigitaleVsa__c/fields/NebenjobSeitP2__c.field-meta.xml
<CustomField>
    <fullName>NebenjobSeitP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.NebenjobSeit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dieses Feld kann direkt im Kontakt geändert werden</inlineHelpText>
    <label>Nebenjob seit P2</label>
    <type>Date</type>
</CustomField>