force-app/main/default/objects/DigitaleVsa__c/fields/NettLohnGehaltP1__c.field-meta.xml
<CustomField>
    <fullName>NettLohnGehaltP1__c</fullName>
    <label>Nett Lohn / Gehalt P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>