force-app/main/default/objects/DigitaleVsa__c/fields/NettLohnGehaltP2__c.field-meta.xml
<CustomField>
    <fullName>NettLohnGehaltP2__c</fullName>
    <label>Nett Lohn / Gehalt P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>