force-app/main/default/objects/DigitaleVsa__c/fields/OrtP1__c.field-meta.xml
<CustomField>
    <fullName>OrtP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ort P1</label>
    <type>Text</type>
</CustomField>