force-app/main/default/objects/DigitaleVsa__c/fields/OrtP2__c.field-meta.xml
<CustomField>
    <fullName>OrtP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ort P2</label>
    <type>Text</type>
</CustomField>