force-app/main/default/objects/DigitaleVsa__c/fields/PLZP1__c.field-meta.xml
<CustomField>
    <fullName>PLZP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLZ P1</label>
    <type>Text</type>
</CustomField>