force-app/main/default/objects/DigitaleVsa__c/fields/PLZP2__c.field-meta.xml
<CustomField>
    <fullName>PLZP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLZ P2</label>
    <type>Text</type>
</CustomField>