force-app/main/default/objects/DigitaleVsa__c/fields/PraemieLebensversicherungenP1__c.field-meta.xml
<CustomField>
    <fullName>PraemieLebensversicherungenP1__c</fullName>
    <label>Prämie Lebensversicherungen P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>