force-app/main/default/objects/DigitaleVsa__c/fields/PraemieLebensversicherungenP2__c.field-meta.xml
<CustomField>
    <fullName>PraemieLebensversicherungenP2__c</fullName>
    <label>Prämie Lebensversicherungen P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>