force-app/main/default/objects/DigitaleVsa__c/fields/PraemiePrivateKrankenversicherungP1__c.field-meta.xml
<CustomField>
    <fullName>PraemiePrivateKrankenversicherungP1__c</fullName>
    <label>Prämie private Krankenversicherung P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>