force-app/main/default/objects/DigitaleVsa__c/fields/PraemiePrivateKrankenversicherungP2__c.field-meta.xml
<CustomField>
    <fullName>PraemiePrivateKrankenversicherungP2__c</fullName>
    <label>Prämie private Krankenversicherung P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>