force-app/main/default/objects/DigitaleVsa__c/fields/ProbezeitBisP1__c.field-meta.xml
<CustomField>
    <fullName>ProbezeitBisP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.ProbezeitBis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probezeit bis P1</label>
    <type>Date</type>
</CustomField>