force-app/main/default/objects/DigitaleVsa__c/fields/ProbezeitBisP2__c.field-meta.xml
<CustomField>
    <fullName>ProbezeitBisP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.ProbezeitBis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probezeit bis P2</label>
    <type>Date</type>
</CustomField>