force-app/main/default/objects/DigitaleVsa__c/fields/RateFuerBaufinanzierungP1__c.field-meta.xml
<CustomField>
    <fullName>RateFuerBaufinanzierungP1__c</fullName>
    <label>Rate für Baufinanzierung P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>