force-app/main/default/objects/DigitaleVsa__c/fields/RateFuerBaufinanzierungP2__c.field-meta.xml
<CustomField>
    <fullName>RateFuerBaufinanzierungP2__c</fullName>
    <label>Rate für Baufinanzierung P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>