force-app/main/default/objects/DigitaleVsa__c/fields/RentePensionP1__c.field-meta.xml
<CustomField>
    <fullName>RentePensionP1__c</fullName>
    <label>Rente / Pension P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>