force-app/main/default/objects/DigitaleVsa__c/fields/RentePensionP2__c.field-meta.xml
<CustomField>
    <fullName>RentePensionP2__c</fullName>
    <label>Rente / Pension P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>