force-app/main/default/objects/DigitaleVsa__c/fields/SonderzahlungenP1__c.field-meta.xml
<CustomField>
    <fullName>SonderzahlungenP1__c</fullName>
    <label>Sonderzahlungen P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>