force-app/main/default/objects/DigitaleVsa__c/fields/SonderzahlungenP2__c.field-meta.xml
<CustomField>
    <fullName>SonderzahlungenP2__c</fullName>
    <label>Sonderzahlungen P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>