force-app/main/default/objects/DigitaleVsa__c/fields/SonstigeEinnahmenP1__c.field-meta.xml
<CustomField>
    <fullName>SonstigeEinnahmenP1__c</fullName>
    <label>Sonstige Einnahmen P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>