force-app/main/default/objects/DigitaleVsa__c/fields/SonstigeEinnahmenP2__c.field-meta.xml
<CustomField>
    <fullName>SonstigeEinnahmenP2__c</fullName>
    <label>Sonstige Einnahmen P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>