force-app/main/default/objects/DigitaleVsa__c/fields/SonstigeVerpflichtungenP1__c.field-meta.xml
<CustomField>
    <fullName>SonstigeVerpflichtungenP1__c</fullName>
    <label>Sonstige Verpflichtungen P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>