force-app/main/default/objects/DigitaleVsa__c/fields/SonstigeVerpflichtungenP2__c.field-meta.xml
<CustomField>
    <fullName>SonstigeVerpflichtungenP2__c</fullName>
    <label>Sonstige Verpflichtungen P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>