force-app/main/default/objects/DigitaleVsa__c/fields/SparbeitraegeBausparvertraegeP1__c.field-meta.xml
<CustomField>
    <fullName>SparbeitraegeBausparvertraegeP1__c</fullName>
    <label>Sparbeiträge Bausparverträge P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>