force-app/main/default/objects/DigitaleVsa__c/fields/SparbeitraegeBausparvertraegeP2__c.field-meta.xml
<CustomField>
    <fullName>SparbeitraegeBausparvertraegeP2__c</fullName>
    <label>Sparbeiträge Bausparverträge P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>