force-app/main/default/objects/DigitaleVsa__c/fields/SpesenueberschussP1__c.field-meta.xml
<CustomField>
    <fullName>SpesenueberschussP1__c</fullName>
    <label>Spesenüberschuß P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>