force-app/main/default/objects/DigitaleVsa__c/fields/SpesenueberschussP2__c.field-meta.xml
<CustomField>
    <fullName>SpesenueberschussP2__c</fullName>
    <label>Spesenüberschuß P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>