force-app/main/default/objects/DigitaleVsa__c/fields/SteuerberaterAnschrift__c.field-meta.xml
<CustomField>
    <fullName>SteuerberaterAnschrift__c</fullName>
    <label>Steuerberater Anschrift</label>
    <length>255</length>
    <type>Text</type>
</CustomField>