force-app/main/default/objects/DigitaleVsa__c/fields/SteuerberaterName__c.field-meta.xml
<CustomField>
    <fullName>SteuerberaterName__c</fullName>
    <label>Steuerberater Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>