force-app/main/default/objects/DigitaleVsa__c/fields/SteuerberaterTelefon__c.field-meta.xml
<CustomField>
    <fullName>SteuerberaterTelefon__c</fullName>
    <label>Steuerberater Telefon</label>
    <type>Phone</type>
</CustomField>