force-app/main/default/objects/DigitaleVsa__c/fields/SteuerIDP1__c.field-meta.xml
<CustomField>
    <fullName>SteuerIDP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.Steuer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SteuerID P1</label>
    <type>Text</type>
</CustomField>