force-app/main/default/objects/DigitaleVsa__c/fields/SteuerIDP2__c.field-meta.xml
<CustomField>
    <fullName>SteuerIDP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.Steuer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SteuerID P2</label>
    <type>Text</type>
</CustomField>