force-app/main/default/objects/DigitaleVsa__c/fields/StrasseP1__c.field-meta.xml
<CustomField>
    <fullName>StrasseP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Straße P1</label>
    <type>Text</type>
</CustomField>