force-app/main/default/objects/DigitaleVsa__c/fields/StrasseP2__c.field-meta.xml
<CustomField>
    <fullName>StrasseP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Straße P2</label>
    <type>Text</type>
</CustomField>