force-app/main/default/objects/DigitaleVsa__c/fields/SummeVersicherungenP1__c.field-meta.xml
<CustomField>
    <fullName>SummeVersicherungenP1__c</fullName>
    <label>Summe Versicherungen P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>