force-app/main/default/objects/DigitaleVsa__c/fields/SummeVersicherungenP2__c.field-meta.xml
<CustomField>
    <fullName>SummeVersicherungenP2__c</fullName>
    <label>Summe Versicherungen P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>