force-app/main/default/objects/DigitaleVsa__c/fields/TelefonPrivatP1__c.field-meta.xml
<CustomField>
    <fullName>TelefonPrivatP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefon privat P1</label>
    <type>Text</type>
</CustomField>