force-app/main/default/objects/DigitaleVsa__c/fields/TelefonPrivatP2__c.field-meta.xml
<CustomField>
    <fullName>TelefonPrivatP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefon privat P2</label>
    <type>Text</type>
</CustomField>