force-app/main/default/objects/DigitaleVsa__c/fields/UnterhaltseinkuenfteP1__c.field-meta.xml
<CustomField>
    <fullName>UnterhaltseinkuenfteP1__c</fullName>
    <label>Unterhaltseinkünfte P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>