force-app/main/default/objects/DigitaleVsa__c/fields/UnterhaltseinkuenfteP2__c.field-meta.xml
<CustomField>
    <fullName>UnterhaltseinkuenfteP2__c</fullName>
    <label>Unterhaltseinkünfte P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>