force-app/main/default/objects/DigitaleVsa__c/fields/UnterhaltsverpflichtungenP1__c.field-meta.xml
<CustomField>
    <fullName>UnterhaltsverpflichtungenP1__c</fullName>
    <label>Unterhaltsverpflichtungen P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>