force-app/main/default/objects/DigitaleVsa__c/fields/UnterhaltsverpflichtungenP2__c.field-meta.xml
<CustomField>
    <fullName>UnterhaltsverpflichtungenP2__c</fullName>
    <label>Unterhaltsverpflichtungen P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>