force-app/main/default/objects/DigitaleVsa__c/fields/UrlaubsgeldP1__c.field-meta.xml
<CustomField>
    <fullName>UrlaubsgeldP1__c</fullName>
    <label>Urlaubsgeld P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>