force-app/main/default/objects/DigitaleVsa__c/fields/UrlaubsgeldP2__c.field-meta.xml
<CustomField>
    <fullName>UrlaubsgeldP2__c</fullName>
    <label>Urlaubsgeld P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>