force-app/main/default/objects/DigitaleVsa__c/fields/VSAVersendet__c.field-meta.xml
<CustomField>
    <fullName>VSAVersendet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSA versendet</label>
    <type>Checkbox</type>
</CustomField>