force-app/main/default/objects/DigitaleVsa__c/fields/VSAVorhanden__c.field-meta.xml
<CustomField>
    <fullName>VSAVorhanden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSA vorhanden</label>
    <type>Checkbox</type>
</CustomField>