force-app/main/default/objects/DigitaleVsa__c/fields/WarmmieteWohnungP1__c.field-meta.xml
<CustomField>
    <fullName>WarmmieteWohnungP1__c</fullName>
    <label>Warmmiete Wohnung P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>