force-app/main/default/objects/DigitaleVsa__c/fields/WarmmieteWohnungP2__c.field-meta.xml
<CustomField>
    <fullName>WarmmieteWohnungP2__c</fullName>
    <label>Warmmiete Wohnung P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>