force-app/main/default/objects/DigitaleVsa__c/fields/WeihnachtsgeldP1__c.field-meta.xml
<CustomField>
    <fullName>WeihnachtsgeldP1__c</fullName>
    <label>Weihnachtsgeld P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>